--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,13 @@
 name: "Terraform action"
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 permissions:
       id-token: write # This is required for aws oidc connection
       contents: read # This is required for actions/checkout
+      pull-requests: write # This is required for gh bot to comment PR
 env:
   TF_LOG: INFO
   AWS_REGION: ${{ secrets.AWS_REGION }}
